# cardiac-base-editor

./: LICENSE  README.md  paper.bib  paper.md  pyproject.toml  requirements.txt
.github/workflows/: tests.yml
cardiac_base_editor/: cli.py  lnp_delivery.py  mrna_design.py  pipeline.py  plugins.py
cardiac_base_editor/cancer/: hla_typing.py  mhc_binding.py  neoantigen.py  tcr_binding.py
cardiac_base_editor/genomic_intake/: README.md  audit.py  extract.py  ingest.py  storage.py  subjects.py
cardiac_base_editor/models/: be_dict.py  off_target.py  protein_consequence.py
cardiac_base_editor/query/: engine.py  nl.py  registry.py
cardiac_base_editor/web/: app.py
cardiac_base_editor/web/templates/: base.html  dashboard.html  query_function_result.html  query_result.html  run_result.html  subject_detail.html
genomic_intake/: README.md  __main__.py  audit.py  cli.py  extract.py  ingest.py  subjects.py
genomic_intake/web/: app.py
genomic_intake/web/static/: style.css
genomic_intake/web/templates/: subject_detail.html
tests/: test_be_dict.py  test_genomic_intake.py  test_hla_typing.py  test_lnp_delivery.py  test_mhc_binding.py  test_mrna_design.py  test_neoantigen.py  test_off_target.py  test_plugins.py  test_protein_consequence.py  test_query_engine.py  test_query_nl.py  test_query_registry.py  test_tcr_binding.py  test_web.py
